modal otp center align + upload button with text fixed

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -1194,9 +1194,16 @@ footer{
                             .repl-inpfile {
                                 position: absolute;
                                 width: 100%;
-                                height: 100%;
-                                text-align: center;
                                 cursor: pointer;
+                                background: #007bff;
+                                color: #fff;
+                                text-align: center;
+                                height: 33px;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                border-radius: 6px;
+                                border-bottom: 1px solid #00438b;
                                 a{
                                     color: $bluecolor;
                                     border: 1px solid $bluecolor;
@@ -1213,6 +1220,19 @@ footer{
                                 left: 0px;
                                 z-index: 3;
                                 cursor: pointer;
+                                &.fil{
+                                    opacity: 1;
+                                    bottom: -30px;
+                                    position: absolute;
+                                    height: 63px;
+                                    top: inherit;
+                                    color: #007bff;
+                                    left: 0;
+                                    right: 0;
+                                    width: 100%;
+                                    margin: auto;
+                                    padding: 35px 91px 27px;
+                                }
                             }
                         } 
                     }
